--- a/BookLibrary.Client/BookLibrary.Client.csproj
+++ b/BookLibrary.Client/BookLibrary.Client.csproj
@@ -131,6 +131,9 @@
       <Name>BookLibrary.DAL</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="readme.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
